--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Javascript Coding Quiz</title>
 </head>
 <body>
@@ -22,6 +22,6 @@
     <button id="beginButton">Begin</button>
     <button id="nextQuestionButton">Next =></button>
     
-    <script src="./script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
