Final solution upload

--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
 <body>
     <h1>Welcome to the Coding Quiz!</h1>
     <h3>Timer: <span id="timerValue"></span></h3>
-    <h2 class="questionPrompt">Let's get Started</h2>
+    <h2 class="questionPrompt">Let's Get Started</h2>
     <div class="answerOptions">
         <ol>
-            <li class="answerOption1"></li>
-            <li class="answerOption2"></li>
-            <li class="answerOption3"></li>
-            <li class="answerOption4"></li>
+            <li><button class="answerOption1 ans-button"></button></li>
+            <li><button class="answerOption2 ans-button"></button></li>
+            <li><button class="answerOption3 ans-button"></button></li>
+            <li><button class="answerOption4 ans-button"></button></li>
         </ol>
     </div>
 
     <button id="beginButton">Begin</button>
-    <button id="nextQuestionButton">Next =></button>
     
     <script src="./assets/script.js"></script>
 </body>
